--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 *Intermediate/
 *Saved/
 
-**StarterContent/**
+BuildingEscape/Content/StarterContent/**
 
 ########################
 #Xcode Generated Files#
