Add PositionReport class.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,5 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=E03EB3538C4BA0F4E05B15A31F5ABEF8
+CopyrightNotice=Copyright Aarthi Gurusami 2017
 
 [StartupActions]
 bAddPacks=True
