--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 *Intermediate/
 *Saved/
 
-BuildingEscape/Content/StarterContent/**
+**StarterContent/**
 
 ########################
 #Xcode Generated Files#
